Notebook actualizado para leer Word (.docx) en vez de PDF

--- a/INGESTA_MEJORADA_V2.ipynb
+++ b/INGESTA_MEJORADA_V2.ipynb
@@ -23,7 +23,7 @@
       "outputs": [],
       "source": [
         "# 1) Instalar dependencias\n",
-        "!pip install -q supabase sentence-transformers psycopg2-binary pdfplumber\n",
+        "!pip install -q supabase sentence-transformers psycopg2-binary python-docx\n",
         "print('✅ Dependencias instaladas')\n"
       ]
     },
@@ -40,7 +40,7 @@
         "import psycopg2\n",
         "from psycopg2.extras import execute_values\n",
         "from sentence_transformers import SentenceTransformer\n",
-        "import pdfplumber\n",
+        "from docx import Document  # Para leer archivos Word\n",
         "from datetime import datetime, timezone\n",
         "from pathlib import Path\n",
         "\n",
@@ -67,7 +67,9 @@
         "\n",
         "SCHEMA = \"vecs\"\n",
         "TABLE = \"arbot_documents\"\n",
-        "PDF_FILE = \"MANUAL DE CONVIVENCIA ESCOLAR ROLDANISTA 2023.pdf\"\n",
+        "\n",
+        "# ⚠️ CAMBIA EL NOMBRE DEL ARCHIVO SI ES DIFERENTE\n",
+        "WORD_FILE = \"MANUAL DE CONVIVENCIA ESCOLAR ROLDANISTA 2023.docx\"\n",
         "\n",
         "def get_connection():\n",
         "    \"\"\"Conecta directamente a PostgreSQL de Supabase usando psycopg2.\"\"\"\n",
@@ -96,33 +98,53 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 4) 🔧 FUNCIÓN CLAVE: Limpiar palabras cortadas\n",
+        "# 4) 🔧 FUNCIÓN MEJORADA: Limpiar palabras cortadas (sin ser agresiva)\n",
         "def fix_broken_words(text: str) -> str:\n",
         "    \"\"\"\n",
         "    Repara palabras cortadas por mal OCR/extracción.\n",
+        "    SOLO junta cuando hay UNA sola letra seguida de espacio y otra letra.\n",
         "    Ejemplos: 'institu ción' → 'institución'\n",
+        "    NO debe juntar palabras completas.\n",
         "    \"\"\"\n",
         "    if not text:\n",
         "        return text\n",
         "    \n",
-        "    # Patrón: minúscula + espacio + minúscula\n",
-        "    text = re.sub(r'([a-záéíóúñü]) ([a-záéíóúñü])', r'\\1\\2', text)\n",
-        "    # Patrón: Mayúscula + espacio + minúscula\n",
-        "    text = re.sub(r'([A-ZÁÉÍÓÚÑÜ]) ([a-záéíóúñü])', r'\\1\\2', text)\n",
-        "    # Patrón: Mayúscula + espacio + Mayúscula\n",
-        "    text = re.sub(r'([A-ZÁÉÍÓÚÑÜ]) ([A-ZÁÉÍÓÚÑÜ])(?=[A-ZÁÉÍÓÚÑÜ\\s]|$)', r'\\1\\2', text)\n",
-        "    # Repetir para casos anidados\n",
-        "    text = re.sub(r'([a-záéíóúñü]) ([a-záéíóúñü])', r'\\1\\2', text)\n",
-        "    text = re.sub(r'([A-ZÁÉÍÓÚÑÜ]) ([a-záéíóúñü])', r'\\1\\2', text)\n",
-        "    text = re.sub(r'\\s+', ' ', text)\n",
+        "    # Patrón CONSERVADOR: solo junta cuando hay 1-2 letras sueltas\n",
+        "    # Ejemplo: \"a ción\" → \"ación\", \"Rol dán\" → \"Roldán\"\n",
+        "    \n",
+        "    # Caso 1: Una letra minúscula suelta + espacio + palabra\n",
+        "    # \"a ción\" → \"ación\"\n",
+        "    text = re.sub(r'\\b([a-záéíóúñü]{1,2}) ([a-záéíóúñü])', r'\\1\\2', text)\n",
+        "    \n",
+        "    # Caso 2: Palabra + espacio + una letra minúscula suelta\n",
+        "    # \"instituc ión\" → \"institución\"  \n",
+        "    text = re.sub(r'([a-záéíóúñü]) ([a-záéíóúñü]{1,3})\\b', r'\\1\\2', text)\n",
+        "    \n",
+        "    # Caso 3: Mayúscula + espacio + minúscula (inicio de palabra cortada)\n",
+        "    # \"Rol dán\" → \"Roldán\"\n",
+        "    text = re.sub(r'([A-ZÁÉÍÓÚÑÜ][a-záéíóúñü]*) ([a-záéíóúñü]{1,3})\\b', r'\\1\\2', text)\n",
+        "    \n",
+        "    # NO tocar mayúsculas completas para no pegar títulos\n",
+        "    \n",
+        "    # Limpiar espacios múltiples\n",
+        "    text = re.sub(r'  +', ' ', text)\n",
         "    \n",
         "    return text.strip()\n",
         "\n",
         "# Test de la función\n",
-        "print(\"🧪 Test de limpieza:\")\n",
-        "tests = [\"institu ción\", \"ESTUDIANTE S\", \"Anton io Rol dán\", \"derech o proces o\"]\n",
-        "for t in tests:\n",
-        "    print(f\"  '{t}' → '{fix_broken_words(t)}'\")\n",
+        "print(\"🧪 Test de limpieza (versión conservadora):\")\n",
+        "tests = [\n",
+        "    (\"institu ción\", \"institución\"),\n",
+        "    (\"ESTUDIANTE S\", \"ESTUDIANTE S\"),  # NO debe cambiar mayúsculas\n",
+        "    (\"Rol dán\", \"Roldán\"),\n",
+        "    (\"derech o al debido proces o\", \"derecho al debido proceso\"),\n",
+        "    (\"MANUAL DE CONVIVENCIA\", \"MANUAL DE CONVIVENCIA\"),  # NO debe cambiar\n",
+        "]\n",
+        "for original, esperado in tests:\n",
+        "    resultado = fix_broken_words(original)\n",
+        "    status = \"✅\" if resultado == esperado else \"❌\"\n",
+        "    print(f\"  {status} '{original}' → '{resultado}' (esperado: '{esperado}')\")\n",
+        "\n",
         "print('\\n✅ Función de limpieza lista')\n"
       ]
     },
@@ -132,31 +154,37 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 5) Extracción de texto con pdfplumber (MEJOR que PyPDF2)\n",
-        "def read_pdf_extract_text(pdf_path: str):\n",
-        "    pages = []\n",
+        "# 5) Función para leer archivo Word (.docx)\n",
+        "# ¡Mucho más limpio que PDF!\n",
+        "\n",
+        "def read_word_extract_text(docx_path: str):\n",
+        "    \"\"\"\n",
+        "    Extrae texto de un archivo Word (.docx).\n",
+        "    El texto viene LIMPIO, sin problemas de OCR ni palabras cortadas.\n",
+        "    \"\"\"\n",
+        "    doc = Document(docx_path)\n",
+        "    paragraphs = []\n",
         "    full_text = \"\"\n",
         "    \n",
-        "    with pdfplumber.open(pdf_path) as pdf:\n",
-        "        total = len(pdf.pages)\n",
-        "        print(f\"📖 Procesando {total} páginas...\")\n",
-        "        \n",
-        "        for i, page in enumerate(pdf.pages, start=1):\n",
-        "            try:\n",
-        "                raw_text = page.extract_text() or \"\"\n",
-        "                # 🔧 APLICAR LIMPIEZA AUTOMÁTICA\n",
-        "                cleaned_text = fix_broken_words(raw_text)\n",
-        "                pages.append({\"page\": i, \"text\": cleaned_text})\n",
-        "                full_text += f\"\\n\\n--- Página {i} ---\\n\\n\" + cleaned_text\n",
-        "                if i % 20 == 0:\n",
-        "                    print(f\"  ✓ {i}/{total}\")\n",
-        "            except Exception as e:\n",
-        "                print(f\"  ⚠ Error página {i}: {e}\")\n",
+        "    print(f\"📄 Leyendo documento Word: {docx_path}\")\n",
         "    \n",
-        "    print(f'✅ PDF procesado: {len(pages)} páginas')\n",
-        "    return {\"text\": full_text, \"pages\": pages}\n",
+        "    for i, para in enumerate(doc.paragraphs):\n",
+        "        text = para.text.strip()\n",
+        "        if text:  # Solo párrafos con contenido\n",
+        "            paragraphs.append({\"index\": i, \"text\": text})\n",
+        "            full_text += text + \"\\n\\n\"\n",
+        "    \n",
+        "    print(f'✅ Documento leído: {len(paragraphs)} párrafos con texto')\n",
+        "    \n",
+        "    # Mostrar preview\n",
+        "    print(\"\\n📋 Preview (primeros 500 caracteres):\")\n",
+        "    print(\"-\"*40)\n",
+        "    print(full_text[:500])\n",
+        "    print(\"-\"*40)\n",
+        "    \n",
+        "    return {\"text\": full_text, \"paragraphs\": paragraphs}\n",
         "\n",
-        "print('✅ Función de extracción lista')\n"
+        "print('✅ Función de extracción de Word lista')\n"
       ]
     },
     {
@@ -165,7 +193,22 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 6) Utilidades y Chunking jerárquico\n",
+        "# 6) Utilidades\n",
+        "def clean_text(s):\n",
+        "    \"\"\"Limpia espacios extra.\"\"\"\n",
+        "    if not s: return s\n",
+        "    return re.sub(r'\\s+', ' ', s).strip()\n",
+        "\n",
+        "print('✅ Utilidades listas')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 7) Utilidades y Chunking jerárquico\n",
         "def clean_text(s):\n",
         "    if not s: return s\n",
         "    s = fix_broken_words(s)\n",
@@ -225,7 +268,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 7) Modelo de embeddings\n",
+        "# 8) Modelo de embeddings\n",
         "print('🧠 Cargando modelo de embeddings...')\n",
         "model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2')\n",
         "print(f'✅ Modelo cargado — dimensión: {model.get_sentence_embedding_dimension()}')\n",
@@ -247,7 +290,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 8) Subir a Supabase\n",
+        "# 9) Subir a Supabase\n",
         "def upload_chunks(chunks, conn):\n",
         "    cur = conn.cursor()\n",
         "    \n",
@@ -286,34 +329,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 9) 🚀 EJECUTAR INGESTA - Asegúrate de haber subido el PDF\n",
+        "# 10) 🚀 EJECUTAR INGESTA DESDE WORD\n",
         "# ⚠️ IMPORTANTE: Este script BORRA todos los datos anteriores de Supabase\n",
-        "#    y los reemplaza con los nuevos datos limpios.\n",
         "\n",
-        "if not os.path.exists(PDF_FILE):\n",
-        "    print(f\"❗ No se encuentra: {PDF_FILE}\")\n",
-        "    print(\"   Sube el archivo PDF antes de ejecutar esta celda.\")\n",
+        "if not os.path.exists(WORD_FILE):\n",
+        "    print(f\"❗ No se encuentra: {WORD_FILE}\")\n",
+        "    print(\"   Sube el archivo Word (.docx) antes de ejecutar esta celda.\")\n",
         "    print(\"\\n   📁 Clic en el ícono de carpeta (izquierda) → Subir archivo\")\n",
         "else:\n",
         "    print('='*50)\n",
-        "    print('🚀 INICIANDO INGESTA MEJORADA')\n",
+        "    print('🚀 INGESTA DESDE WORD (.docx)')\n",
         "    print('='*50)\n",
         "    \n",
-        "    # 1) Extraer texto (con limpieza automática de palabras cortadas)\n",
-        "    print('\\n📄 Paso 1: Extrayendo texto del PDF con pdfplumber...')\n",
-        "    data = read_pdf_extract_text(PDF_FILE)\n",
+        "    # 1) Extraer texto del Word (¡viene limpio!)\n",
+        "    print('\\n📄 Paso 1: Leyendo archivo Word...')\n",
+        "    data = read_word_extract_text(WORD_FILE)\n",
         "    \n",
-        "    # 2) Generar chunks jerárquicos\n",
+        "    # 2) Generar chunks\n",
         "    print('\\n✂️ Paso 2: Generando chunks por artículos/capítulos...')\n",
         "    chunks = chunk_hierarchical_legal(data['text'])\n",
         "    for i, c in enumerate(chunks):\n",
-        "        c['meta']['file'] = PDF_FILE\n",
+        "        c['meta']['file'] = WORD_FILE\n",
         "    \n",
         "    # 3) Conectar a Supabase\n",
-        "    print('\\n🔗 Paso 3: Conectando a Supabase PostgreSQL...')\n",
+        "    print('\\n🔗 Paso 3: Conectando a Supabase...')\n",
         "    conn = get_connection()\n",
         "    \n",
-        "    # ⚠️ BORRAR DATOS ANTERIORES\n",
+        "    # 4) BORRAR DATOS ANTERIORES\n",
         "    print('\\n🗑️ Paso 4: BORRANDO datos anteriores de Supabase...')\n",
         "    cur = conn.cursor()\n",
         "    cur.execute(f\"SELECT count(*) FROM {SCHEMA}.{TABLE}\")\n",
@@ -324,12 +366,12 @@
         "    cur.close()\n",
         "    print('   ✅ Tabla limpiada completamente')\n",
         "    \n",
-        "    # 4) Subir chunks nuevos con embeddings\n",
-        "    print('\\n📤 Paso 5: Subiendo chunks LIMPIOS con embeddings...')\n",
+        "    # 5) Subir chunks con embeddings\n",
+        "    print('\\n📤 Paso 5: Subiendo chunks con embeddings...')\n",
         "    upload_chunks(chunks, conn)\n",
         "    \n",
-        "    # 5) Verificar resultado final\n",
-        "    print('\\n🔍 Paso 6: Verificando resultado...')\n",
+        "    # 6) Verificar resultado\n",
+        "    print('\\n🔍 Paso 6: Verificando...')\n",
         "    cur = conn.cursor()\n",
         "    cur.execute(f\"SELECT count(*) FROM {SCHEMA}.{TABLE}\")\n",
         "    total = cur.fetchone()[0]\n",
@@ -339,18 +381,16 @@
         "    print('\\n' + '='*50)\n",
         "    print(f'✅ INGESTA COMPLETADA EXITOSAMENTE')\n",
         "    print(f'   📊 Chunks subidos: {total}')\n",
-        "    print(f'   🔧 Texto limpio (sin palabras cortadas)')\n",
+        "    print(f'   📄 Fuente: Word (.docx) - texto limpio')\n",
         "    print('='*50)\n",
         "    print('\\n⚠️ Ahora ve a Railway y haz REDEPLOY de tu bot.')\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "# 10) 🧪 TEST: Verificar que el artículo 52 esté limpio\n",
+        "# 11) 🧪 TEST: Verificar el artículo 52\n",
         "conn = get_connection()\n",
         "cur = conn.cursor()\n",
         "cur.execute(f\"\"\"\n",
@@ -364,29 +404,13 @@
         "conn.close()\n",
         "\n",
         "if result:\n",
-        "    print('✅ Artículo 52 encontrado (debe estar SIN palabras cortadas):')\n",
+        "    print('✅ Artículo 52 encontrado:')\n",
         "    print('-'*50)\n",
         "    print(result[0])\n",
         "    print('-'*50)\n",
+        "    print('\\n👆 Verifica que el texto esté LIMPIO (sin palabras cortadas)')\n",
         "else:\n",
-        "    print('⚠️ No se encontró el artículo 52 en la tabla.')\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## ✅ ¡Listo!\n",
-        "\n",
-        "**Después de ejecutar:**\n",
-        "1. Ve a Railway y haz **redeploy** de tu bot\n",
-        "2. Prueba preguntando: \"¿Qué dice el artículo 52?\"\n",
-        "3. El texto debería salir **limpio** sin palabras cortadas\n",
-        "\n",
-        "**Si algo falla:**\n",
-        "- Verifica que el PDF esté subido con el nombre exacto\n",
-        "- Verifica las credenciales de Supabase\n",
-        "- Revisa los logs de cada celda\n"
+        "    print('⚠️ No se encontró el artículo 52')\n"
       ]
     }
   ],
