Simplificar notebook - remover funciones de limpieza innecesarias para Word

--- a/INGESTA_MEJORADA_V2.ipynb
+++ b/INGESTA_MEJORADA_V2.ipynb
@@ -98,54 +98,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 4) 🔧 FUNCIÓN MEJORADA: Limpiar palabras cortadas (sin ser agresiva)\n",
-        "def fix_broken_words(text: str) -> str:\n",
-        "    \"\"\"\n",
-        "    Repara palabras cortadas por mal OCR/extracción.\n",
-        "    SOLO junta cuando hay UNA sola letra seguida de espacio y otra letra.\n",
-        "    Ejemplos: 'institu ción' → 'institución'\n",
-        "    NO debe juntar palabras completas.\n",
-        "    \"\"\"\n",
-        "    if not text:\n",
-        "        return text\n",
-        "    \n",
-        "    # Patrón CONSERVADOR: solo junta cuando hay 1-2 letras sueltas\n",
-        "    # Ejemplo: \"a ción\" → \"ación\", \"Rol dán\" → \"Roldán\"\n",
-        "    \n",
-        "    # Caso 1: Una letra minúscula suelta + espacio + palabra\n",
-        "    # \"a ción\" → \"ación\"\n",
-        "    text = re.sub(r'\\b([a-záéíóúñü]{1,2}) ([a-záéíóúñü])', r'\\1\\2', text)\n",
-        "    \n",
-        "    # Caso 2: Palabra + espacio + una letra minúscula suelta\n",
-        "    # \"instituc ión\" → \"institución\"  \n",
-        "    text = re.sub(r'([a-záéíóúñü]) ([a-záéíóúñü]{1,3})\\b', r'\\1\\2', text)\n",
-        "    \n",
-        "    # Caso 3: Mayúscula + espacio + minúscula (inicio de palabra cortada)\n",
-        "    # \"Rol dán\" → \"Roldán\"\n",
-        "    text = re.sub(r'([A-ZÁÉÍÓÚÑÜ][a-záéíóúñü]*) ([a-záéíóúñü]{1,3})\\b', r'\\1\\2', text)\n",
-        "    \n",
-        "    # NO tocar mayúsculas completas para no pegar títulos\n",
-        "    \n",
-        "    # Limpiar espacios múltiples\n",
-        "    text = re.sub(r'  +', ' ', text)\n",
-        "    \n",
-        "    return text.strip()\n",
-        "\n",
-        "# Test de la función\n",
-        "print(\"🧪 Test de limpieza (versión conservadora):\")\n",
-        "tests = [\n",
-        "    (\"institu ción\", \"institución\"),\n",
-        "    (\"ESTUDIANTE S\", \"ESTUDIANTE S\"),  # NO debe cambiar mayúsculas\n",
-        "    (\"Rol dán\", \"Roldán\"),\n",
-        "    (\"derech o al debido proces o\", \"derecho al debido proceso\"),\n",
-        "    (\"MANUAL DE CONVIVENCIA\", \"MANUAL DE CONVIVENCIA\"),  # NO debe cambiar\n",
-        "]\n",
-        "for original, esperado in tests:\n",
-        "    resultado = fix_broken_words(original)\n",
-        "    status = \"✅\" if resultado == esperado else \"❌\"\n",
-        "    print(f\"  {status} '{original}' → '{resultado}' (esperado: '{esperado}')\")\n",
-        "\n",
-        "print('\\n✅ Función de limpieza lista')\n"
+        "# 4) ✅ Con Word no necesitamos funciones de limpieza\n",
+        "# El texto de Word viene LIMPIO, sin problemas de OCR ni palabras cortadas\n",
+        "print(\"📄 Usando archivo Word (.docx)\")\n",
+        "print(\"✅ No se necesitan funciones de limpieza de texto\")\n",
+        "print(\"   Word extrae texto perfectamente estructurado\")\n"
       ]
     },
     {
