Eliminar todas las funciones de limpieza - Word no las necesita

--- a/INGESTA_MEJORADA_V2.ipynb
+++ b/INGESTA_MEJORADA_V2.ipynb
@@ -150,13 +150,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 6) Utilidades\n",
-        "def clean_text(s):\n",
-        "    \"\"\"Limpia espacios extra.\"\"\"\n",
-        "    if not s: return s\n",
-        "    return re.sub(r'\\s+', ' ', s).strip()\n",
-        "\n",
-        "print('✅ Utilidades listas')\n"
+        "# 6) Celda eliminada - No se necesitan utilidades de limpieza con Word\n",
+        "print('✅ Word extrae texto limpio, no se necesitan utilidades extra')\n"
       ]
     },
     {
@@ -165,13 +160,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# 7) Utilidades y Chunking jerárquico\n",
-        "def clean_text(s):\n",
-        "    if not s: return s\n",
-        "    s = fix_broken_words(s)\n",
-        "    return re.sub(r'\\s+', ' ', s).strip()\n",
-        "\n",
+        "# 7) Chunking jerárquico (dividir por artículos/capítulos)\n",
         "def chunk_hierarchical_legal(full_text, max_tokens=1600):\n",
+        "    \"\"\"Divide el texto por TÍTULO, CAPÍTULO y ARTÍCULO.\"\"\"\n",
         "    lines = full_text.split('\\n')\n",
         "    chunks = []\n",
         "    current = {'title': None, 'chapter': None, 'article': None, 'text_lines': []}\n",
@@ -183,8 +174,8 @@
         "    def save():\n",
         "        txt = '\\n'.join(current['text_lines']).strip()\n",
         "        if txt:\n",
-        "            cleaned = clean_text(txt)\n",
-        "            chunks.append({'text': cleaned, 'meta': {k: current.get(k) for k in ('title','chapter','article')}})\n",
+        "            # Con Word el texto ya viene limpio, solo strip()\n",
+        "            chunks.append({'text': txt, 'meta': {k: current.get(k) for k in ('title','chapter','article')}})\n",
         "\n",
         "    for line in lines:\n",
         "        s = line.strip()\n",
@@ -213,10 +204,10 @@
         "        c['meta']['chunk_index'] = i\n",
         "        c['meta']['ingestion_date'] = datetime.now(timezone.utc).isoformat()\n",
         "    \n",
-        "    print(f'✅ Chunking: {len(chunks)} chunks')\n",
+        "    print(f'✅ Chunking: {len(chunks)} chunks generados')\n",
         "    return chunks\n",
         "\n",
-        "print('✅ Chunking listo')\n"
+        "print('✅ Función de chunking lista')\n"
       ]
     },
     {
@@ -249,11 +240,12 @@
       "source": [
         "# 9) Subir a Supabase\n",
         "def upload_chunks(chunks, conn):\n",
+        "    \"\"\"Genera embeddings y sube chunks a Supabase.\"\"\"\n",
         "    cur = conn.cursor()\n",
         "    \n",
         "    records = []\n",
         "    for i, c in enumerate(chunks):\n",
-        "        text = clean_text(c['text'])\n",
+        "        text = c['text'].strip()  # Word ya viene limpio\n",
         "        if not text: continue\n",
         "        meta = c.get('meta', {})\n",
         "        chunk_id = f\"{meta.get('file', 'doc')}_{meta.get('chunk_index', i)}\"\n",
@@ -274,7 +266,7 @@
         "    \n",
         "    execute_values(cur, insert_sql, to_insert, template=\"(%s, %s::vector, %s, %s::jsonb)\")\n",
         "    conn.commit()\n",
-        "    print(f'✅ Subidos {len(to_insert)} chunks')\n",
+        "    print(f'✅ Subidos {len(to_insert)} chunks a Supabase')\n",
         "    cur.close()\n",
         "\n",
         "print('✅ Función de subida lista')\n"
